--- a/assignment-0/package.json
+++ b/assignment-0/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/**/*"
+    "start": "parcel src/index.html"
   },
   "author": "",
   "license": "ISC",
